--- a/style.css
+++ b/style.css
@@ -30,6 +30,27 @@ body {
  * Header
  */
 
+ .banner-wrap {
+  background-image: url("C:/Users/USER/Downloads/Profile.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  border-bottom: 10px solid #222222;
+  position: relative;
+  z-index: 1;
+  
+}
+.overlay{
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  background: black;
+  opacity: 60%;
+  position: absolute;
+  top: 0;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
