added Connect section

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
  */
 
  .banner-wrap {
-  background-image: url(./assets/banner.jpg);
+  background-image: url(./assets/Siyamethemba.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
